Add OAuth2 PKCE support for all OAuth2 interactions
- Bumps Java requirement to Java 17 and thus GoCD 22.1.0
- Tidies up/removes Hamcrest usage
- Implementation ported from GitLab plugin

Co-authored-by: Vinod Dampuru <vinod.dampuru@thoughtworks.com>