@@ -16,28 +16,23 @@
 
 package cd.go.authorization.github.executors;
 
-import cd.go.authorization.github.Constants;
-import cd.go.authorization.github.client.StateGenerator;
+import cd.go.authorization.github.client.GitHubClientBuilder;
 import cd.go.authorization.github.exceptions.NoAuthorizationConfigurationException;
 import cd.go.authorization.github.models.AuthConfig;
 import cd.go.authorization.github.models.AuthenticateWith;
 import cd.go.authorization.github.models.GitHubConfiguration;
 import cd.go.authorization.github.requests.GetAuthorizationServerUrlRequest;
 import com.thoughtworks.go.plugin.api.response.GoPluginApiResponse;
-import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-import org.mockito.MockedStatic;
-import org.mockito.Mockito;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 
 import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
@@ -48,6 +43,8 @@ public class GetAuthorizationServerUrlRequestExecutorTest {
     private GetAuthorizationServerUrlRequest request;
     @Mock
     private AuthConfig authConfig;
+    @Mock
+    private GitHubClientBuilder gitHubClientBuilder;
 
     private GetAuthorizationServerUrlRequestExecutor executor;
 
@@ -55,7 +52,7 @@ public class GetAuthorizationServerUrlRequestExecutorTest {
     public void setUp() throws Exception {
         openMocks(this);
 
-        executor = new GetAuthorizationServerUrlRequestExecutor(request);
+        executor = new GetAuthorizationServerUrlRequestExecutor(request, gitHubClientBuilder);
     }
 
     @Test
@@ -67,68 +64,24 @@ public class GetAuthorizationServerUrlRequestExecutorTest {
 
     @Test
     public void shouldReturnAuthorizationServerUrlForGitHub() throws Exception {
-        try (MockedStatic<StateGenerator> stateGenerator = Mockito.mockStatic(StateGenerator.class)) {
-            stateGenerator.when(StateGenerator::generate).thenReturn(DUMMY_STATE_VALUE);
-            GitHubConfiguration gitHubConfiguration = new GitHubConfiguration("client-id", "client-secret", AuthenticateWith.GITHUB, null, "example-1");
+        GitHubConfiguration gitHubConfiguration = new GitHubConfiguration("client-id", "client-secret", AuthenticateWith.GITHUB, null, "example-1");
 
-            when(authConfig.gitHubConfiguration()).thenReturn(gitHubConfiguration);
-            when(request.authConfigs()).thenReturn(Collections.singletonList(authConfig));
-            when(request.callbackUrl()).thenReturn("call-back-url");
+        when(request.authConfigs()).thenReturn(Collections.singletonList(authConfig));
+        when(authConfig.gitHubConfiguration()).thenReturn(gitHubConfiguration);
+        when(request.callbackUrl()).thenReturn("call-back-url");
+        when(gitHubClientBuilder.authorizationServerArgs(gitHubConfiguration, "call-back-url")).thenReturn(List.of("foo-url", "foo-state", "foo-code-verifier"));
 
-            final GoPluginApiResponse response = executor.execute();
+        final GoPluginApiResponse response = executor.execute();
 
-            assertThat(response.responseCode(), is(200));
-            JSONObject expectedJSON = new JSONObject(Map.of(
-                    "authorization_server_url", "https://github.com/login/oauth/authorize?client_id=client-id&redirect_uri=call-back-url&scope=user%3Aemail&state=some-state-value",
-                    "auth_session", Map.of(Constants.AUTH_SESSION_STATE, DUMMY_STATE_VALUE)
-            ));
-
-            JSONAssert.assertEquals(expectedJSON, new JSONObject(response.responseBody()), JSONCompareMode.LENIENT);
-        }
-    }
-
-    @Test
-    public void shouldReturnAuthorizationServerUrlWithTrailingSlash() throws Exception {
-        try (MockedStatic<StateGenerator> stateGenerator = Mockito.mockStatic(StateGenerator.class)) {
-            stateGenerator.when(StateGenerator::generate).thenReturn(DUMMY_STATE_VALUE);
-            GitHubConfiguration gitHubConfiguration = new GitHubConfiguration("client-id", "client-secret", AuthenticateWith.GITHUB_ENTERPRISE, "http://enterprise.url/", "example-1");
-
-            when(authConfig.gitHubConfiguration()).thenReturn(gitHubConfiguration);
-            when(request.authConfigs()).thenReturn(Collections.singletonList(authConfig));
-            when(request.callbackUrl()).thenReturn("call-back-url");
-
-            final GoPluginApiResponse response = executor.execute();
-
-            assertThat(response.responseCode(), is(200));
-            JSONObject expectedJSON = new JSONObject(Map.of(
-                    "authorization_server_url", "http://enterprise.url/login/oauth/authorize?client_id=client-id&redirect_uri=call-back-url&scope=user%3Aemail&state=some-state-value",
-                    "auth_session", Map.of(Constants.AUTH_SESSION_STATE, DUMMY_STATE_VALUE)
-            ));
-
-            JSONAssert.assertEquals(expectedJSON, new JSONObject(response.responseBody()), JSONCompareMode.LENIENT);
-        }
-    }
-
-    @Test
-    public void shouldReturnAuthorizationServerUrlForGitHubEnterprise() throws Exception {
-        try (MockedStatic<StateGenerator> stateGenerator = Mockito.mockStatic(StateGenerator.class)) {
-            stateGenerator.when(StateGenerator::generate).thenReturn(DUMMY_STATE_VALUE);
-            GitHubConfiguration gitHubConfiguration = new GitHubConfiguration("client-id", "client-secret", AuthenticateWith.GITHUB_ENTERPRISE, "http://enterprise.url", "example-1");
-
-            when(authConfig.gitHubConfiguration()).thenReturn(gitHubConfiguration);
-            when(request.authConfigs()).thenReturn(Collections.singletonList(authConfig));
-            when(request.callbackUrl()).thenReturn("call-back-url");
-
-            final GoPluginApiResponse response = executor.execute();
-
-            assertThat(response.responseCode(), is(200));
-
-            JSONObject expectedJSON = new JSONObject(Map.of(
-                    "authorization_server_url", "http://enterprise.url/login/oauth/authorize?client_id=client-id&redirect_uri=call-back-url&scope=user%3Aemail&state=some-state-value",
-                    "auth_session", Map.of(Constants.AUTH_SESSION_STATE, DUMMY_STATE_VALUE)
-            ));
-
-            JSONAssert.assertEquals(expectedJSON, new JSONObject(response.responseBody()), JSONCompareMode.LENIENT);
-        }
+        assertThat(response.responseCode()).isEqualTo(200);
+        JSONAssert.assertEquals("""
+                {
+                  "authorization_server_url": "foo-url",
+                  "auth_session" : {
+                    "oauth2_state": "foo-state",
+                    "oauth2_code_verifier_encoded": "foo-code-verifier"
+                  }
+                }
+                """, response.responseBody(), JSONCompareMode.NON_EXTENSIBLE);
     }
 }
